src/y.output
   0  $accept : prog $end

   1  prog : ID BEGIN cuerpo END
   2       | ID cuerpo END
   3       | BEGIN END
   4       | ID BEGIN cuerpo
   5       | ID cuerpo
   6       | BEGIN cuerpo

   7  cuerpo : cuerpo sentencia
   8         | sentencia

   9  sentencia : sentencia_declaracion
  10            | sentencia_ejecucion
  11            | ETIQUETA

  12  sentencia_declaracion : tipo lista_variables ';'
  13                        | tipo lista_variables
  14                        | declaracion_funcion
  15                        | TYPEDEF ID ASIGNACION tipo '{' subrango '}' ';'
  16                        | TYPEDEF ID ASIGNACION tipo '{' subrango ';'
  17                        | TYPEDEF ID ASIGNACION tipo "" subrango '}' ';'
  18                        | TYPEDEF ID ASIGNACION tipo subrango ';'
  19                        | TYPEDEF ID ASIGNACION tipo '{' '}' ';'
  20                        | TYPEDEF ASIGNACION tipo '{' subrango '}' ';'
  21                        | TYPEDEF ID ASIGNACION '{' subrango '}' ';'
  22                        | TYPEDEF STRUCT '<' lista_tipos '>' '{' lista_variables '}' ID ';'
  23                        | TYPEDEF STRUCT lista_tipos '{' lista_variables '}' ID ';'
  24                        | TYPEDEF '<' lista_tipos '>' '{' lista_variables '}' ID ';'
  25                        | TYPEDEF STRUCT '<' lista_tipos '>' '{' lista_variables '}' ';'

  26  subrango : LONGINT ',' LONGINT
  27           | LONGINT LONGINT
  28           | DOUBLE ',' DOUBLE
  29           | DOUBLE DOUBLE
  30           | HEXA ',' HEXA
  31           | HEXA HEXA

  32  declaracion_funcion : tipo FUN ID '(' parametro ')' BEGIN cuerpo_funcion END
  33                      | FUN ID '(' parametro ')' BEGIN cuerpo_funcion END
  34                      | tipo ID '(' parametro ')' BEGIN cuerpo_funcion END
  35                      | tipo FUN '(' parametro ')' BEGIN cuerpo_funcion END
  36                      | tipo FUN ID parametro BEGIN cuerpo_funcion END
  37                      | tipo FUN ID '(' ')' BEGIN cuerpo_funcion END
  38                      | tipo FUN ID '(' parametro ')' cuerpo_funcion END
  39                      | tipo FUN ID '(' parametro ')' BEGIN END

  40  sentencia_ejecucion : asignacion
  41                      | condicion_if
  42                      | sentencia_print
  43                      | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'
  44                      | REPEAT bloque_sentencia_ejecutable '(' condicion ')' ';'
  45                      | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')'
  46                      | REPEAT bloque_sentencia_ejecutable WHILE '(' ')' ';'
  47                      | GOTO ETIQUETA ';'
  48                      | GOTO ETIQUETA
  49                      | GOTO ';'
  50                      | ETIQUETA ';'

  51  sentencia_print : OUTF '(' CML ')' ';'
  52                  | OUTF '(' expresion ')' ';'
  53                  | OUTF '(' ')' ';'
  54                  | OUTF '(' expresion ')'
  55                  | OUTF '(' CML ')'
  56                  | OUTF CML ';'
  57                  | OUTF expresion ';'

  58  cuerpo_funcion : RET '(' expresion ')' ';'
  59                 | cuerpo RET '(' expresion ')' ';'
  60                 | RET '(' expresion ')'
  61                 | '(' expresion ')' ';'
  62                 | RET expresion ';'
  63                 | RET '(' expresion ';'
  64                 | RET expresion ')' ';'
  65                 | cuerpo RET expresion ';'
  66                 | cuerpo RET '(' expresion ';'
  67                 | cuerpo RET expresion ')' ';'

  68  parametro : tipo ID
  69            | tipo

  70  invocacion_funcion : ID '(' expresion ')'

  71  bloque_sentencia_ejecutable : BEGIN bloque_sentencia_ejecutable sentencia_ejecucion END
  72                              | BEGIN sentencia_ejecucion END

  73  condicion_if : IF '(' condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'
  74               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'
  75               | IF '(' condicion ')' bloque_sentencia_ejecutable END_IF ';'
  76               | IF '(' ')' THEN bloque_sentencia_ejecutable END_IF ';'
  77               | IF THEN END_IF ';'
  78               | IF THEN bloque_sentencia_ejecutable ';'
  79               | IF THEN bloque_sentencia_ejecutable END_IF
  80               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'
  81               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF
  82               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'
  83               | IF '(' condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'
  84               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'

  85  condicion : '(' expresion comparador expresion ')'
  86            | '(' ')'
  87            | expresion comparador expresion ')'

  88  asignacion : lista_variables ASIGNACION lista_expresiones ';'

  89  expresion : expresion '+' termino
  90            | expresion '-' termino
  91            | expresion '+' '+' termino
  92            | expresion '-' '+' termino
  93            | '+' termino
  94            | expresion '+'
  95            | expresion '-'
  96            | TOD '(' expresion ')'
  97            | TOD '(' ')'
  98            | termino

  99  termino : termino '*' factor
 100          | termino '/' factor
 101          | termino '*' '*' factor
 102          | termino '*' '/' factor
 103          | termino '/' '/' factor
 104          | termino '/' '*' factor
 105          | termino '/'
 106          | termino '*'
 107          | '/' factor
 108          | '*' factor
 109          | factor

 110  factor : invocacion_funcion
 111         | ID
 112         | LONGINT
 113         | '-' LONGINT
 114         | HEXA
 115         | '-' HEXA
 116         | DOUBLE
 117         | '-' DOUBLE

 118  lista_variables : lista_variables ',' ID
 119                  | lista_variables ',' id_compuesta
 120                  | id_compuesta
 121                  | ID

 122  id_compuesta : ID '.' ID

 123  lista_expresiones : lista_expresiones ',' expresion
 124                    | expresion

 125  lista_tipos : lista_tipos ',' tipo
 126              | lista_tipos tipo
 127              | tipo

 128  tipo : DOUBLE
 129       | LONGINT
 130       | HEXA
 131       | ID

 132  comparador : '<'
 133             | '>'
 134             | "MAYOR_IGUAL"
 135             | "MENOR_IGUAL"
 136             | "DISTINTO"

state 0
	$accept : . prog $end  (0)

	BEGIN  shift 1
	ID  shift 2
	.  error

	prog  goto 3


state 1
	prog : BEGIN . END  (3)
	prog : BEGIN . cuerpo  (6)

	IF  shift 4
	END  shift 5
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 16
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	id_compuesta  goto 26


state 2
	prog : ID . BEGIN cuerpo END  (1)
	prog : ID . cuerpo END  (2)
	prog : ID . BEGIN cuerpo  (4)
	prog : ID . cuerpo  (5)

	IF  shift 4
	BEGIN  shift 27
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 28
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	id_compuesta  goto 26


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF . '(' condicion ')' bloque_sentencia_ejecutable END_IF ';'  (75)
	condicion_if : IF . '(' ')' THEN bloque_sentencia_ejecutable END_IF ';'  (76)
	condicion_if : IF . THEN END_IF ';'  (77)
	condicion_if : IF . THEN bloque_sentencia_ejecutable ';'  (78)
	condicion_if : IF . THEN bloque_sentencia_ejecutable END_IF  (79)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (80)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (81)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (82)
	condicion_if : IF . '(' condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (83)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (84)

	THEN  shift 29
	'('  shift 30
	.  error


state 5
	prog : BEGIN END .  (3)

	.  reduce 3


state 6
	sentencia_print : OUTF . '(' CML ')' ';'  (51)
	sentencia_print : OUTF . '(' expresion ')' ';'  (52)
	sentencia_print : OUTF . '(' ')' ';'  (53)
	sentencia_print : OUTF . '(' expresion ')'  (54)
	sentencia_print : OUTF . '(' CML ')'  (55)
	sentencia_print : OUTF . CML ';'  (56)
	sentencia_print : OUTF . expresion ';'  (57)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	CML  shift 34
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	'('  shift 41
	.  error

	expresion  goto 42
	invocacion_funcion  goto 43
	termino  goto 44
	factor  goto 45


state 7
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '{' subrango '}' ';'  (15)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '{' subrango ';'  (16)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo "" subrango '}' ';'  (17)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo subrango ';'  (18)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '{' '}' ';'  (19)
	sentencia_declaracion : TYPEDEF . ASIGNACION tipo '{' subrango '}' ';'  (20)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION '{' subrango '}' ';'  (21)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (22)
	sentencia_declaracion : TYPEDEF . STRUCT lista_tipos '{' lista_variables '}' ID ';'  (23)
	sentencia_declaracion : TYPEDEF . '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (24)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '{' lista_variables '}' ';'  (25)

	ID  shift 46
	STRUCT  shift 47
	ASIGNACION  shift 48
	'<'  shift 49
	.  error


state 8
	declaracion_funcion : FUN . ID '(' parametro ')' BEGIN cuerpo_funcion END  (33)

	ID  shift 50
	.  error


state 9
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'  (43)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable '(' condicion ')' ';'  (44)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')'  (45)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' ')' ';'  (46)

	BEGIN  shift 51
	.  error

	bloque_sentencia_ejecutable  goto 52


state 10
	sentencia_ejecucion : GOTO . ETIQUETA ';'  (47)
	sentencia_ejecucion : GOTO . ETIQUETA  (48)
	sentencia_ejecucion : GOTO . ';'  (49)

	ETIQUETA  shift 53
	';'  shift 54
	.  error


state 11
	lista_variables : ID .  (121)
	id_compuesta : ID . '.' ID  (122)
	tipo : ID .  (131)

	'.'  shift 55
	FUN  reduce 131
	ID  reduce 131
	ASIGNACION  reduce 121
	','  reduce 121


state 12
	tipo : LONGINT .  (129)

	.  reduce 129


state 13
	tipo : HEXA .  (130)

	.  reduce 130


state 14
	tipo : DOUBLE .  (128)

	.  reduce 128


state 15
	sentencia : ETIQUETA .  (11)
	sentencia_ejecucion : ETIQUETA . ';'  (50)

	';'  shift 56
	$end  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	FUN  reduce 11
	RET  reduce 11
	REPEAT  reduce 11
	GOTO  reduce 11
	ID  reduce 11
	LONGINT  reduce 11
	HEXA  reduce 11
	DOUBLE  reduce 11
	ETIQUETA  reduce 11


state 16
	prog : BEGIN cuerpo .  (6)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	$end  reduce 6

	sentencia  goto 57
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	id_compuesta  goto 26


state 17
	cuerpo : sentencia .  (8)

	.  reduce 8


state 18
	sentencia : sentencia_declaracion .  (9)

	.  reduce 9


state 19
	sentencia : sentencia_ejecucion .  (10)

	.  reduce 10


state 20
	sentencia_declaracion : tipo . lista_variables ';'  (12)
	sentencia_declaracion : tipo . lista_variables  (13)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN cuerpo_funcion END  (32)
	declaracion_funcion : tipo . ID '(' parametro ')' BEGIN cuerpo_funcion END  (34)
	declaracion_funcion : tipo . FUN '(' parametro ')' BEGIN cuerpo_funcion END  (35)
	declaracion_funcion : tipo . FUN ID parametro BEGIN cuerpo_funcion END  (36)
	declaracion_funcion : tipo . FUN ID '(' ')' BEGIN cuerpo_funcion END  (37)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' cuerpo_funcion END  (38)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN END  (39)

	FUN  shift 58
	ID  shift 59
	.  error

	lista_variables  goto 60
	id_compuesta  goto 26


state 21
	asignacion : lista_variables . ASIGNACION lista_expresiones ';'  (88)
	lista_variables : lista_variables . ',' ID  (118)
	lista_variables : lista_variables . ',' id_compuesta  (119)

	ASIGNACION  shift 61
	','  shift 62
	.  error


state 22
	sentencia_declaracion : declaracion_funcion .  (14)

	.  reduce 14


state 23
	sentencia_ejecucion : asignacion .  (40)

	.  reduce 40


state 24
	sentencia_ejecucion : condicion_if .  (41)

	.  reduce 41


state 25
	sentencia_ejecucion : sentencia_print .  (42)

	.  reduce 42


state 26
	lista_variables : id_compuesta .  (120)

	.  reduce 120


state 27
	prog : ID BEGIN . cuerpo END  (1)
	prog : ID BEGIN . cuerpo  (4)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 63
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	id_compuesta  goto 26


state 28
	prog : ID cuerpo . END  (2)
	prog : ID cuerpo .  (5)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 64
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	$end  reduce 5

	sentencia  goto 57
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	id_compuesta  goto 26


state 29
	condicion_if : IF THEN . END_IF ';'  (77)
	condicion_if : IF THEN . bloque_sentencia_ejecutable ';'  (78)
	condicion_if : IF THEN . bloque_sentencia_ejecutable END_IF  (79)

	BEGIN  shift 51
	END_IF  shift 65
	.  error

	bloque_sentencia_ejecutable  goto 66


state 30
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF '(' . condicion ')' bloque_sentencia_ejecutable END_IF ';'  (75)
	condicion_if : IF '(' . ')' THEN bloque_sentencia_ejecutable END_IF ';'  (76)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (80)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (81)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (82)
	condicion_if : IF '(' . condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (83)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (84)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	'('  shift 67
	')'  shift 68
	.  error

	condicion  goto 69
	expresion  goto 70
	invocacion_funcion  goto 43
	termino  goto 44
	factor  goto 45


state 31
	invocacion_funcion : ID . '(' expresion ')'  (70)
	factor : ID .  (111)

	'('  shift 71
	'+'  reduce 111
	'-'  reduce 111
	'*'  reduce 111
	'/'  reduce 111
	';'  reduce 111
	'<'  reduce 111
	'>'  reduce 111
	','  reduce 111
	')'  reduce 111
	"MAYOR_IGUAL"  reduce 111
	"MENOR_IGUAL"  reduce 111
	"DISTINTO"  reduce 111


state 32
	factor : LONGINT .  (112)

	.  reduce 112


state 33
	factor : HEXA .  (114)

	.  reduce 114


state 34
	sentencia_print : OUTF CML . ';'  (56)

	';'  shift 72
	.  error


state 35
	factor : DOUBLE .  (116)

	.  reduce 116


state 36
	expresion : TOD . '(' expresion ')'  (96)
	expresion : TOD . '(' ')'  (97)

	'('  shift 73
	.  error


state 37
	expresion : '+' . termino  (93)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	DOUBLE  shift 35
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	.  error

	invocacion_funcion  goto 43
	termino  goto 74
	factor  goto 45


state 38
	factor : '-' . LONGINT  (113)
	factor : '-' . HEXA  (115)
	factor : '-' . DOUBLE  (117)

	LONGINT  shift 75
	HEXA  shift 76
	DOUBLE  shift 77
	.  error


state 39
	termino : '*' . factor  (108)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	DOUBLE  shift 35
	'-'  shift 38
	.  error

	invocacion_funcion  goto 43
	factor  goto 78


state 40
	termino : '/' . factor  (107)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	DOUBLE  shift 35
	'-'  shift 38
	.  error

	invocacion_funcion  goto 43
	factor  goto 79


state 41
	sentencia_print : OUTF '(' . CML ')' ';'  (51)
	sentencia_print : OUTF '(' . expresion ')' ';'  (52)
	sentencia_print : OUTF '(' . ')' ';'  (53)
	sentencia_print : OUTF '(' . expresion ')'  (54)
	sentencia_print : OUTF '(' . CML ')'  (55)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	CML  shift 80
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	')'  shift 81
	.  error

	expresion  goto 82
	invocacion_funcion  goto 43
	termino  goto 44
	factor  goto 45


state 42
	sentencia_print : OUTF expresion . ';'  (57)
	expresion : expresion . '+' termino  (89)
	expresion : expresion . '-' termino  (90)
	expresion : expresion . '+' '+' termino  (91)
	expresion : expresion . '-' '+' termino  (92)
	expresion : expresion . '+'  (94)
	expresion : expresion . '-'  (95)

	'+'  shift 83
	'-'  shift 84
	';'  shift 85
	.  error


state 43
	factor : invocacion_funcion .  (110)

	.  reduce 110


state 44
	expresion : termino .  (98)
	termino : termino . '*' factor  (99)
	termino : termino . '/' factor  (100)
	termino : termino . '*' '*' factor  (101)
	termino : termino . '*' '/' factor  (102)
	termino : termino . '/' '/' factor  (103)
	termino : termino . '/' '*' factor  (104)
	termino : termino . '/'  (105)
	termino : termino . '*'  (106)

	'*'  shift 86
	'/'  shift 87
	'+'  reduce 98
	'-'  reduce 98
	';'  reduce 98
	'<'  reduce 98
	'>'  reduce 98
	','  reduce 98
	')'  reduce 98
	"MAYOR_IGUAL"  reduce 98
	"MENOR_IGUAL"  reduce 98
	"DISTINTO"  reduce 98


state 45
	termino : factor .  (109)

	.  reduce 109


state 46
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '{' subrango '}' ';'  (15)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '{' subrango ';'  (16)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo "" subrango '}' ';'  (17)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo subrango ';'  (18)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '{' '}' ';'  (19)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION '{' subrango '}' ';'  (21)

	ASIGNACION  shift 88
	.  error


state 47
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (22)
	sentencia_declaracion : TYPEDEF STRUCT . lista_tipos '{' lista_variables '}' ID ';'  (23)
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '{' lista_variables '}' ';'  (25)

	ID  shift 89
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	'<'  shift 90
	.  error

	tipo  goto 91
	lista_tipos  goto 92


state 48
	sentencia_declaracion : TYPEDEF ASIGNACION . tipo '{' subrango '}' ';'  (20)

	ID  shift 89
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	.  error

	tipo  goto 93


state 49
	sentencia_declaracion : TYPEDEF '<' . lista_tipos '>' '{' lista_variables '}' ID ';'  (24)

	ID  shift 89
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	.  error

	tipo  goto 91
	lista_tipos  goto 94


state 50
	declaracion_funcion : FUN ID . '(' parametro ')' BEGIN cuerpo_funcion END  (33)

	'('  shift 95
	.  error


state 51
	bloque_sentencia_ejecutable : BEGIN . bloque_sentencia_ejecutable sentencia_ejecucion END  (71)
	bloque_sentencia_ejecutable : BEGIN . sentencia_ejecucion END  (72)

	IF  shift 4
	BEGIN  shift 51
	OUTF  shift 6
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 96
	ETIQUETA  shift 97
	.  error

	sentencia_ejecucion  goto 98
	lista_variables  goto 21
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	bloque_sentencia_ejecutable  goto 99
	id_compuesta  goto 26


state 52
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' condicion ')' ';'  (43)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . '(' condicion ')' ';'  (44)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' condicion ')'  (45)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' ')' ';'  (46)

	WHILE  shift 100
	'('  shift 101
	.  error


state 53
	sentencia_ejecucion : GOTO ETIQUETA . ';'  (47)
	sentencia_ejecucion : GOTO ETIQUETA .  (48)

	';'  shift 102
	$end  reduce 48
	IF  reduce 48
	END  reduce 48
	OUTF  reduce 48
	TYPEDEF  reduce 48
	FUN  reduce 48
	RET  reduce 48
	REPEAT  reduce 48
	GOTO  reduce 48
	ID  reduce 48
	LONGINT  reduce 48
	HEXA  reduce 48
	DOUBLE  reduce 48
	ETIQUETA  reduce 48


state 54
	sentencia_ejecucion : GOTO ';' .  (49)

	.  reduce 49


state 55
	id_compuesta : ID '.' . ID  (122)

	ID  shift 103
	.  error


state 56
	sentencia_ejecucion : ETIQUETA ';' .  (50)

	.  reduce 50


state 57
	cuerpo : cuerpo sentencia .  (7)

	.  reduce 7


state 58
	declaracion_funcion : tipo FUN . ID '(' parametro ')' BEGIN cuerpo_funcion END  (32)
	declaracion_funcion : tipo FUN . '(' parametro ')' BEGIN cuerpo_funcion END  (35)
	declaracion_funcion : tipo FUN . ID parametro BEGIN cuerpo_funcion END  (36)
	declaracion_funcion : tipo FUN . ID '(' ')' BEGIN cuerpo_funcion END  (37)
	declaracion_funcion : tipo FUN . ID '(' parametro ')' cuerpo_funcion END  (38)
	declaracion_funcion : tipo FUN . ID '(' parametro ')' BEGIN END  (39)

	ID  shift 104
	'('  shift 105
	.  error


state 59
	declaracion_funcion : tipo ID . '(' parametro ')' BEGIN cuerpo_funcion END  (34)
	lista_variables : ID .  (121)
	id_compuesta : ID . '.' ID  (122)

	'.'  shift 55
	'('  shift 106
	$end  reduce 121
	IF  reduce 121
	END  reduce 121
	OUTF  reduce 121
	TYPEDEF  reduce 121
	FUN  reduce 121
	RET  reduce 121
	REPEAT  reduce 121
	GOTO  reduce 121
	ID  reduce 121
	LONGINT  reduce 121
	HEXA  reduce 121
	DOUBLE  reduce 121
	ETIQUETA  reduce 121
	';'  reduce 121
	','  reduce 121


state 60
	sentencia_declaracion : tipo lista_variables . ';'  (12)
	sentencia_declaracion : tipo lista_variables .  (13)
	lista_variables : lista_variables . ',' ID  (118)
	lista_variables : lista_variables . ',' id_compuesta  (119)

	';'  shift 107
	','  shift 62
	$end  reduce 13
	IF  reduce 13
	END  reduce 13
	OUTF  reduce 13
	TYPEDEF  reduce 13
	FUN  reduce 13
	RET  reduce 13
	REPEAT  reduce 13
	GOTO  reduce 13
	ID  reduce 13
	LONGINT  reduce 13
	HEXA  reduce 13
	DOUBLE  reduce 13
	ETIQUETA  reduce 13


state 61
	asignacion : lista_variables ASIGNACION . lista_expresiones ';'  (88)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	.  error

	expresion  goto 108
	invocacion_funcion  goto 43
	lista_expresiones  goto 109
	termino  goto 44
	factor  goto 45


state 62
	lista_variables : lista_variables ',' . ID  (118)
	lista_variables : lista_variables ',' . id_compuesta  (119)

	ID  shift 110
	.  error

	id_compuesta  goto 111


state 63
	prog : ID BEGIN cuerpo . END  (1)
	prog : ID BEGIN cuerpo .  (4)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 112
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	HEXA  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	$end  reduce 4

	sentencia  goto 57
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	id_compuesta  goto 26


state 64
	prog : ID cuerpo END .  (2)

	.  reduce 2


state 65
	condicion_if : IF THEN END_IF . ';'  (77)

	';'  shift 113
	.  error


state 66
	condicion_if : IF THEN bloque_sentencia_ejecutable . ';'  (78)
	condicion_if : IF THEN bloque_sentencia_ejecutable . END_IF  (79)

	END_IF  shift 114
	';'  shift 115
	.  error


state 67
	condicion : '(' . expresion comparador expresion ')'  (85)
	condicion : '(' . ')'  (86)

	ID  shift 31
	LONGINT  shift 32
	HEXA  shift 33
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	')'  shift 116
	.  error

	expresion  goto 117
	invocacion_funcion  goto 43
	termino  goto 44
	factor  goto 45


state 68
	condicion_if : IF '(' ')' . THEN bloque_sentencia_ejecutable END_IF ';'  (76)

	THEN  shift 118
	.  error


state 69
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF '(' condicion . ')' bloque_sentencia_ejecutable END_IF ';'  (75)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (80)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (81)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (82)
	condicion_if : IF '(' condicion . ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (83)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (84)

	')'  shift 119
	.  error


state 70
